Fixed times jumping as string shortens

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ body{
 }
 
 .countdown{
-    width: 110px;
+    width: 120px;
     display: inline-block;
     text-align: left;
   }
